fix(gradient text component): change placeholder colour to higher contrast one (#161)

--- a/src/style.css
+++ b/src/style.css
@@ -159,7 +159,7 @@ textarea {
 }
 
 ::placeholder {
-  color: var(--input-color);
+  color: #A5A5A7;
   font-size: 1rem;
 }
 
